--- a/src/html/index.html
+++ b/src/html/index.html
@@ -1,16 +1,64 @@
 <!DOCTYPE html>
 <html>
-  <head>
-    <meta charset="utf-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>Issue Maps Classic</title>
-    <script type="application/javascript" defer="defer" src="lib/jquery/jquery.min.js"></script>
-    <script type="application/javascript" defer="defer" src="lib/bootstrap/js/bootstrap.min.js"></script>
-    <script type="application/javascript" defer="defer" src="js/main.js"></script>
-    <link href="lib/bootstrap/css/bootstrap.min.css" rel="stylesheet">
-  </head>
-  <body>
-    <h1>Hello, world!</h1>
-  </body>
+<head>
+  <meta charset="utf-8">
+  <meta http-equiv="X-UA-Compatible" content="IE=edge">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <title>Issue Maps Classic</title>
+  <link href="lib/bootstrap/css/bootstrap.min.css" rel="stylesheet">
+  <style>
+  html, head, #map { margin: 0; padding: 0; height: 100%; }
+  .navbar { margin-bottom: 0; }
+  </style>
+
+  <script type="application/javascript" defer src="https://maps.googleapis.com/maps/api/js?libraries=places&amp;sensor=false"></script>
+  <script type="application/javascript" defer src="lib/jquery/jquery.min.js"></script>
+  <script type="application/javascript" defer src="lib/bootstrap/js/bootstrap.min.js"></script>
+  <script type="application/javascript" defer src="js/setting.js"></script>
+  <script type="application/javascript" defer src="js/main.js"></script>
+</head>
+<body>
+
+<div class="navbar navbar-default">
+  <div class="container-fluid">
+    <div class="navbar-header">
+      <div class="navbar-header">
+        <span class="navbar-brand">Issue Maps <sup>Classic</sup></span>
+
+        <!--a href="javascript:void(0);" class="btn btn-default navbar-btn">Issues</a-->
+      </div>
+    </div>
+    <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
+    </div>
+  </div>
+</div>
+
+<div class="modal fade" id="redmineKeyDialog" tabindex="-1" role="dialog" aria-labelledby="redmineKeyDialogLabel">
+  <div class="modal-dialog" role="document">
+    <div class="modal-content">
+      <div class="modal-header">
+        <h4 class="modal-title" id="redmineKeyDialogLabel">Redmine API Access Key Required</h4>
+      </div>
+      <div class="modal-body">
+        <form>
+          <div class="form-group">
+            <label for="redmineKey" class="control-label">Redmine API Access Key</label>
+            <input type="text" class="form-control" id="redmineKey">
+            <p class="help-block">
+              正しいKeyを入れてもログインできない場合は、スーパーリロード（Ctrl+F5）をして下さい。
+            </p>
+          </div>
+        </form>
+      </div>
+      <div class="modal-footer">
+        <button type="button" class="btn btn-primary" data-dismiss="modal">ログイン</button>
+      </div>
+    </div>
+  </div>
+</div>
+
+<div id="map">
+</div>
+
+</body>
 </html>
