--- a/src/html/index.html
+++ b/src/html/index.html
@@ -7,8 +7,8 @@
   <title>Issue Maps Classic</title>
   <link href="lib/bootstrap/css/bootstrap.min.css" rel="stylesheet">
   <style>
-  html, head, #map { margin: 0; padding: 0; height: 100%; }
-  .navbar { margin-bottom: 0; }
+  html, body, .main.container-fluid, .main.container-fluid > .row-fluid, .main.container-fluid > .row-fluid > * { margin: 0; padding: 0; height: 100%; }
+  #map { width: 100%; height: 100%; }
   </style>
 
   <script type="application/javascript" defer src="https://maps.googleapis.com/maps/api/js?libraries=places&amp;sensor=false"></script>
@@ -18,20 +18,6 @@
   <script type="application/javascript" defer src="js/main.js"></script>
 </head>
 <body>
-
-<div class="navbar navbar-default">
-  <div class="container-fluid">
-    <div class="navbar-header">
-      <div class="navbar-header">
-        <span class="navbar-brand">Issue Maps <sup>Classic</sup></span>
-
-        <!--a href="javascript:void(0);" class="btn btn-default navbar-btn">Issues</a-->
-      </div>
-    </div>
-    <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
-    </div>
-  </div>
-</div>
 
 <div class="modal fade" id="redmineKeyDialog" tabindex="-1" role="dialog" aria-labelledby="redmineKeyDialogLabel">
   <div class="modal-dialog" role="document">
@@ -57,7 +43,16 @@
   </div>
 </div>
 
-<div id="map">
+<div class="container-fluid main">
+  <div class="row-fluid">
+    <div class="col-sm-8">
+      <div id="map"></div>
+    </div>
+    <div class="col-sm-4">
+      <div id="issuesList" class="list-group">
+      </div>
+    </div>
+  </div>
 </div>
 
 </body>
