fit #map to window

--- a/src/html/index.html
+++ b/src/html/index.html
@@ -10,6 +10,7 @@
   html, head, #map { margin: 0; padding: 0; height: 100%; }
   .navbar { margin-bottom: 0; }
   .issuesList { margin: 1ex; }
+  #map { height: calc(100vh - 54px); }
   </style>
 
   <script type="application/javascript" defer src="https://maps.googleapis.com/maps/api/js?libraries=places&amp;sensor=false"></script>
