--- a/src/html/index.html
+++ b/src/html/index.html
@@ -9,8 +9,8 @@
   <style>
   html, head, #map { margin: 0; padding: 0; height: 100%; }
   .navbar { margin-bottom: 0; }
+  .main-content { margin: 0; padding: 0 };
   .issuesList { margin: 1ex; }
-  #map { height: calc(100vh - 54px); }
   </style>
 
   <script type="application/javascript" defer src="https://maps.googleapis.com/maps/api/js?libraries=places&amp;sensor=false"></script>
@@ -24,13 +24,17 @@
 <div class="navbar navbar-default">
   <div class="container-fluid">
     <div class="navbar-header">
-      <div class="navbar-header">
-        <span class="navbar-brand">Issue Maps <sup>Classic</sup></span>
-
-        <!--a href="javascript:void(0);" class="btn btn-default navbar-btn">Issues</a-->
-      </div>
+      <button class="navbar-toggle collapsed" type="button" data-toggle="collapse" data-target=".navbar-collapse[aria-expanded]">
+        <span class="sr-only">Toggle navigation</span>
+        <span class="icon-bar"></span><span class="icon-bar"></span><span class="icon-bar"></span>
+      </button>
+      <span class="navbar-brand">Issue Maps <sup>Classic</sup></span>
     </div>
-    <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
+    <div class="collapse navbar-collapse" aria-expanded="false">
+      <ul class="nav navbar-nav">
+        <li><a href="#map">Map</a></li>
+        <li><a href="#issuesList">Issues</a></li>
+      </ul>
     </div>
   </div>
 </div>
@@ -59,7 +63,11 @@
   </div>
 </div>
 
-<div id="map">
+<div class="main-content">
+<div id="issuesList" class="collapse">
+</div>
+<div id="map" class="collapse">
+</div>
 </div>
 
 </body>
