add search on issue list

--- a/src/html/index.html
+++ b/src/html/index.html
@@ -65,6 +65,16 @@
 
 <div class="main-content">
 <div id="issuesList" class="collapse">
+  <div>
+    <fieldset class="control-group">
+      <label for="issueSearch" class="control-label">検索</label>
+      <div class="controls">
+        <input id="issueSearch" type="text" class="form-control" />
+      </div>
+    </fieldset>
+    <hr />
+  </div>
+  <div class="issues"></div>
 </div>
 <div id="map" class="collapse">
 </div>
