--- a/src/html/index.html
+++ b/src/html/index.html
@@ -5,79 +5,64 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <title>Issue Maps Classic</title>
-  <link href="lib/bootstrap/css/bootstrap.min.css" rel="stylesheet">
-  <style>
-  html, head, #map { margin: 0; padding: 0; height: 100%; }
-  .navbar { margin-bottom: 0; }
-  .main-content { margin: 0; padding: 0 };
-  .issuesList { margin: 1ex; }
-  </style>
+
+  <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet" type="text/css">
+  <link href="https://cdnjs.cloudflare.com/ajax/libs/material-design-lite/1.3.0/material.min.css" rel="stylesheet" type="text/css">
+  <link href="https://cdnjs.cloudflare.com/ajax/libs/dialog-polyfill/0.4.5/dialog-polyfill.min.css" rel="stylesheet" type="text/css">
 
   <script type="application/javascript" defer src="https://maps.googleapis.com/maps/api/js?libraries=places&amp;sensor=false"></script>
-  <script type="application/javascript" defer src="lib/jquery/jquery.min.js"></script>
-  <script type="application/javascript" defer src="lib/bootstrap/js/bootstrap.min.js"></script>
+  <script type="application/javascript" defer src="https://cdnjs.cloudflare.com/ajax/libs/material-design-lite/1.3.0/material.min.js"></script>
+  <script type="application/javascript" defer src="https://cdnjs.cloudflare.com/ajax/libs/dialog-polyfill/0.4.5/dialog-polyfill.min.js"></script>
+  <script type="application/javascript" defer src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script>
   <script type="application/javascript" defer src="js/main.js"></script>
+  <title>Issue Maps Classic</title>
 </head>
 <body>
 
-<div class="navbar navbar-default">
-  <div class="container-fluid">
-    <div class="navbar-header">
-      <button class="navbar-toggle collapsed" type="button" data-toggle="collapse" data-target=".navbar-collapse[aria-expanded]">
-        <span class="sr-only">Toggle navigation</span>
-        <span class="icon-bar"></span><span class="icon-bar"></span><span class="icon-bar"></span>
-      </button>
-      <span class="navbar-brand">Issue Maps <sup>Classic</sup></span>
-    </div>
-    <div class="collapse navbar-collapse" aria-expanded="false">
-      <ul class="nav navbar-nav">
-        <li><a href="#map">Map</a></li>
-        <li><a href="#issuesList">Issues</a></li>
-      </ul>
-    </div>
-  </div>
-</div>
-
-<div class="modal fade" id="redmineKeyDialog" tabindex="-1" role="dialog" aria-labelledby="redmineKeyDialogLabel">
-  <div class="modal-dialog" role="document">
-    <div class="modal-content">
-      <div class="modal-header">
-        <h4 class="modal-title" id="redmineKeyDialogLabel">Redmine API Access Key Required</h4>
-      </div>
-      <div class="modal-body">
-        <form>
-          <div class="form-group">
-            <label for="redmineKey" class="control-label">Redmine API Access Key</label>
-            <input type="text" class="form-control" id="redmineKey">
-            <p class="help-block">
-              正しいKeyを入れてもログインできない場合は、スーパーリロード（Ctrl+F5）をして下さい。
-            </p>
+  <div class="mdl-layout mdl-js-layout mdl-layout--fixed-header">
+    <header class="mdl-layout__header">
+      <div class="mdl-layout__header-row">
+        <span class="mdl-layout-title mdl-cell--hide-phone">Issue Maps <sup>Classic</sup></span>
+        <div class="mdl-layout-spacer"></div>
+        <div class="mdl-textfield mdl-js-textfield mdl-textfield--expandable
+                  mdl-textfield--floating-label mdl-textfield--align-right">
+          <label class="mdl-button mdl-js-button mdl-button--icon"
+                 for="issueSearch">
+            <i class="material-icons">search</i>
+          </label>
+          <div class="mdl-textfield__expandable-holder">
+            <input class="mdl-textfield__input" type="text" name="search"
+                   id="issueSearch">
           </div>
-        </form>
+        </div>
       </div>
-      <div class="modal-footer">
-        <button type="button" class="btn btn-primary" data-dismiss="modal">ログイン</button>
+    </header>
+    <main class="mdl-layout mdl-grid mdl-grid--no-spacing">
+      <div id="issuesList" class="mdl-cell mdl-cell--4-col mdl-cell--4-col-tablet mdl-cell--order-1-phone mdl-layout">
+        <ul class="mdl-list">
+        </ul>
       </div>
-    </div>
+      <div id="map" class="mdl-cell mdl-cell--8-col mdl-cell--4-col-tablet mdl-cell--order-0-phone mdl-layout">
+      </div>
+    </main>
   </div>
-</div>
 
-<div class="main-content">
-<div id="issuesList" class="collapse">
-  <div>
-    <fieldset class="control-group">
-      <label for="issueSearch" class="control-label">検索</label>
-      <div class="controls">
-        <input id="issueSearch" type="text" class="form-control" />
+  <dialog class="mdl-dialog" id="redmineKeyDialog">
+    <form method="dialog">
+      <h4 class="mdl-dialog__title">Redmine API Access Key Required</h4>
+      <div class="mdl-dialog__content">
+        <p>
+          <div class="mdl-textfield mdl-js-textfield mdl-textfield--floating-label">
+            <input class="mdl-textfield__input" type="text" id="redmineKey">
+            <label class="mdl-textfield__label" for="redmineKey">Redmine API Access Key</label>
+          </div>
+        </p>
       </div>
-    </fieldset>
-    <hr />
-  </div>
-  <div class="issues"></div>
-</div>
-<div id="map" class="collapse">
-</div>
-</div>
+      <div class="mdl-dialog__actions mdl-dialog__actions--full-width">
+        <button type="submit" class="mdl-button mdl-js-button mdl-js-ripple-effect">ログイン</button>
+      </div>
+    </form>
+  </dialog>
 
 </body>
 </html>
