--- a/src/html/index.html
+++ b/src/html/index.html
@@ -9,11 +9,25 @@
   <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet" type="text/css">
   <link href="https://cdnjs.cloudflare.com/ajax/libs/material-design-lite/1.3.0/material.min.css" rel="stylesheet" type="text/css">
   <link href="https://cdnjs.cloudflare.com/ajax/libs/dialog-polyfill/0.4.5/dialog-polyfill.min.css" rel="stylesheet" type="text/css">
+  <style type="text/css">
+    .mdl-x-expansion-panel {
+      position: relative;
+    }
+    .mdl-x-expansion-panel+.mdl-x-expansion-panel {
+      border-top: 1px solid rgba(0,0,0,.13);
+      margin-top: -8px;
+    }
+    .mdl-x-expansion-panel.is-active+.mdl-x-expansion-panel, .mdl-x-expansion-panel+.mdl-x-expansion-panel.is-active {
+      border-top: 0;
+      margin-top: 8px;
+    }
+  </style>
 
   <script type="application/javascript" defer src="https://maps.googleapis.com/maps/api/js?libraries=places&amp;sensor=false"></script>
   <script type="application/javascript" defer src="https://cdnjs.cloudflare.com/ajax/libs/material-design-lite/1.3.0/material.min.js"></script>
   <script type="application/javascript" defer src="https://cdnjs.cloudflare.com/ajax/libs/dialog-polyfill/0.4.5/dialog-polyfill.min.js"></script>
   <script type="application/javascript" defer src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script>
+  <script type="application/javascript" defer src="https://cdnjs.cloudflare.com/ajax/libs/marked/0.3.6/marked.min.js"></script>
   <script type="application/javascript" defer src="js/main.js"></script>
   <title>Issue Maps Classic</title>
 </head>
@@ -22,7 +36,8 @@
   <div class="mdl-layout mdl-js-layout mdl-layout--fixed-header">
     <header class="mdl-layout__header">
       <div class="mdl-layout__header-row">
-        <span class="mdl-layout-title mdl-cell--hide-phone">Issue Maps <sup>Classic</sup></span>
+
+        <span class="mdl-layout-title mdl-cell--hide-phone">Issue Maps <sup><small>Classic</small></sup></span>
         <div class="mdl-layout-spacer"></div>
         <div class="mdl-textfield mdl-js-textfield mdl-textfield--expandable
                   mdl-textfield--floating-label mdl-textfield--align-right">
@@ -38,9 +53,9 @@
       </div>
     </header>
     <main class="mdl-layout mdl-grid mdl-grid--no-spacing">
-      <div id="issuesList" class="mdl-cell mdl-cell--4-col mdl-cell--4-col-tablet mdl-cell--order-1-phone mdl-layout">
-        <ul class="mdl-list">
-        </ul>
+      <div class="mdl-cell mdl-cell--4-col mdl-cell--4-col-tablet mdl-cell--order-1-phone mdl-layout mdl-color--grey-200">
+        <div id="issuesList">
+        </div>
       </div>
       <div id="map" class="mdl-cell mdl-cell--8-col mdl-cell--4-col-tablet mdl-cell--order-0-phone mdl-layout">
       </div>
