--- a/src/html/index.html
+++ b/src/html/index.html
@@ -36,6 +36,14 @@
   <div class="mdl-layout mdl-js-layout mdl-layout--fixed-header">
     <header class="mdl-layout__header">
       <div class="mdl-layout__header-row">
+        <button id="menuButton" class="mdl-button mdl-js-button mdl-button--icon">
+          <i class="material-icons">more_vert</i>
+        </button>
+
+        <ul class="mdl-menu mdl-menu--bottom-left mdl-js-menu mdl-js-ripple-effect"
+            for="menuButton">
+          <li class="mdl-menu__item" id="logoutRedmine">Logout</li>
+        </ul>
 
         <span class="mdl-layout-title mdl-cell--hide-phone">Issue Maps <sup><small>Classic</small></sup></span>
         <div class="mdl-layout-spacer"></div>
@@ -62,11 +70,15 @@
     </main>
   </div>
 
-  <dialog class="mdl-dialog" id="redmineKeyDialog">
+  <dialog class="mdl-dialog" id="redmineAddressKeyDialog">
     <form method="dialog">
-      <h4 class="mdl-dialog__title">Redmine API Access Key Required</h4>
+      <h4 class="mdl-dialog__title">Redmine Address/Key</h4>
       <div class="mdl-dialog__content">
         <p>
+          <div class="mdl-textfield mdl-js-textfield mdl-textfield--floating-label">
+            <input class="mdl-textfield__input" type="text" id="redmineAddress" placeholder="https://redmine.example.com">
+            <label class="mdl-textfield__label" for="redmineAddress">Redmine Address</label>
+          </div>
           <div class="mdl-textfield mdl-js-textfield mdl-textfield--floating-label">
             <input class="mdl-textfield__input" type="text" id="redmineKey">
             <label class="mdl-textfield__label" for="redmineKey">Redmine API Access Key</label>
@@ -74,7 +86,7 @@
         </p>
       </div>
       <div class="mdl-dialog__actions mdl-dialog__actions--full-width">
-        <button type="submit" class="mdl-button mdl-js-button mdl-js-ripple-effect">ログイン</button>
+        <button type="submit" class="mdl-button mdl-js-button mdl-js-ripple-effect">Login</button>
       </div>
     </form>
   </dialog>
