--- a/src/html/index.html
+++ b/src/html/index.html
@@ -58,6 +58,17 @@
                    id="issueSearch">
           </div>
         </div>
+
+        <button id="orderButton" class="mdl-button mdl-js-button mdl-button--icon">
+          <i class="material-icons">sort</i>
+        </button>
+        <ul class="mdl-menu mdl-menu--bottom-right mdl-js-menu mdl-js-ripple-effect"
+            for="orderButton">
+          <li class="mdl-menu__item" data-key="id">id順</li>
+          <li class="mdl-menu__item" data-key="start_date">start_date順</li>
+          <li class="mdl-menu__item" data-key="created_on">created_on順</li>
+          <li class="mdl-menu__item" data-key="title">title順</li>
+        </ul>
       </div>
     </header>
     <main class="mdl-layout mdl-grid mdl-grid--no-spacing">
