add to the autocomplete category texts

--- a/src/html/index.html
+++ b/src/html/index.html
@@ -45,7 +45,8 @@
           </label>
           <div class="mdl-textfield__expandable-holder">
             <input class="mdl-textfield__input" type="text" name="search"
-                   id="issueSearch">
+                   id="issueSearch" list="issueSearchCategoryDataList">
+            <datalist id="issueSearchCategoryDataList"></datalist>
           </div>
         </div>
 
