apply marked to the popup window on the map

--- a/src/html/index.html
+++ b/src/html/index.html
@@ -21,6 +21,11 @@
       border-top: 0;
       margin-top: 8px;
     }
+
+    .issue-popup .issue-title {
+      font-size: larger;
+      margin-bottom: 0.5ex;
+    }
   </style>
 
   <script type="application/javascript" defer src="https://maps.googleapis.com/maps/api/js?libraries=places&amp;sensor=false"></script>
