Introduce the project ID as a optional configurable value with the default value "quest".
 - Introduce "Redmine Project ID" to specify the project ID.
   - Note: diffshare/issue-map do samething using `issues_url` setting parameter.
 - Add "required" attribute to the required field on the login dialog.

--- a/src/html/index.html
+++ b/src/html/index.html
@@ -89,12 +89,16 @@
       <div class="mdl-dialog__content">
         <p>
           <div class="mdl-textfield mdl-js-textfield mdl-textfield--floating-label">
-            <input class="mdl-textfield__input" type="text" id="redmineAddress" placeholder="https://redmine.example.com">
+            <input class="mdl-textfield__input" type="text" id="redmineAddress" placeholder="https://redmine.example.com" required>
             <label class="mdl-textfield__label" for="redmineAddress">Redmine Address</label>
           </div>
           <div class="mdl-textfield mdl-js-textfield mdl-textfield--floating-label">
-            <input class="mdl-textfield__input" type="text" id="redmineKey">
+            <input class="mdl-textfield__input" type="text" id="redmineKey" required>
             <label class="mdl-textfield__label" for="redmineKey">Redmine API Access Key</label>
+          </div>
+          <div class="mdl-textfield mdl-js-textfield mdl-textfield--floating-label">
+            <input class="mdl-textfield__input" type="text" id="redmineProjectID" value="quest" placeholder="(No Project ID)">
+            <label class="mdl-textfield__label" for="redmineProjectID">Redmine Project ID</label>
           </div>
         </p>
       </div>
