--- a/src/html/index.html
+++ b/src/html/index.html
@@ -37,7 +37,7 @@
   <script type="application/javascript" defer src="https://cdnjs.cloudflare.com/ajax/libs/material-design-lite/1.3.0/material.min.js"></script>
   <script type="application/javascript" defer src="https://cdnjs.cloudflare.com/ajax/libs/dialog-polyfill/0.4.7/dialog-polyfill.min.js"></script>
   <script type="application/javascript" defer src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
-  <script type="application/javascript" defer src="https://cdnjs.cloudflare.com/ajax/libs/marked/0.3.6/marked.min.js"></script>
+  <script type="application/javascript" defer src="https://cdnjs.cloudflare.com/ajax/libs/markdown-it/8.3.1/markdown-it.min.js"></script>
   <script type="application/javascript" defer src="js/main.js"></script>
   <title>Issue Maps Classic</title>
 </head>
