introduce due_date sorting, and use due_date as end of the date.

--- a/src/html/index.html
+++ b/src/html/index.html
@@ -67,6 +67,7 @@
             for="orderButton">
           <li class="mdl-menu__item" data-key="id">id順</li>
           <li class="mdl-menu__item" data-key="start_date">start_date順</li>
+          <li class="mdl-menu__item" data-key="due_date">due_date順</li>
           <li class="mdl-menu__item" data-key="created_on">created_on順</li>
           <li class="mdl-menu__item" data-key="title">title順</li>
         </ul>
