use 14px text (i.e. normal font size) for card title

--- a/src/html/index.html
+++ b/src/html/index.html
@@ -22,6 +22,10 @@
       margin-top: 8px;
     }
 
+    #issuesList .mdl-x-expansion-panel .mdl-card__title-text {
+      font-size: 14px;
+    }
+
     .issue-popup .issue-title {
       font-size: larger;
       margin-bottom: 0.5ex;
