--- a/src/html/index.html
+++ b/src/html/index.html
@@ -37,7 +37,7 @@
     }
   </style>
 
-  <script type="application/javascript" defer src="https://maps.googleapis.com/maps/api/js?libraries=places&amp;sensor=false"></script>
+  <script type="application/javascript" defer src="https://maps.googleapis.com/maps/api/js?key=GOOGLE_API_KEY&amp;libraries=places&amp;sensor=false"></script>
   <script type="application/javascript" defer src="https://cdnjs.cloudflare.com/ajax/libs/material-design-lite/1.3.0/material.min.js"></script>
   <script type="application/javascript" defer src="https://cdnjs.cloudflare.com/ajax/libs/dialog-polyfill/0.4.7/dialog-polyfill.min.js"></script>
   <script type="application/javascript" defer src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
